# -U-L-T-R-O-N

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PROMPT_JUEGO_VIRAL.md  README.md  _ultron_test.txt  _ultron_test_completo.txt  eslint.config.js  package.json  tsconfig.json
.github/workflows/: ci.yml
__tests__/: agents.test.ts  commands-verify.test.ts  extended.test.ts  functional.test.ts  llm.test.ts  memory.test.ts  server.test.ts  shared.test.ts  tools.test.ts
desktop/: .gitignore  README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/public/: dashboard.html
desktop/src-tauri/src/: lib.rs  main.rs
electron/: main.js  ultron-desktop.bat  ultron-desktop.ps1
inventory-system/: .env.example  README.md
inventory-system/backend/: package.json
inventory-system/frontend/: package.json
scripts/: copy-dist-for-desktop.cjs  copy-public.cjs  generate-icons.cjs  set-icon.js
src/: audio.js  glitch.js  index.ts  main.js  player.js
src/agents/: architect.ts  base.ts  basher.ts  commands.ts  editor.ts  graph-learner.ts  librarian.ts  model-tester.ts  orchestrator.ts  prompts.ts  researcher.ts  reviewer.ts  thinker.ts  tools-executor.ts  types.ts
src/cli/: app.ts  commands.ts  display.ts  theme.ts
src/llm/: chat.ts  discovery.ts  health.ts  providers.ts  types.ts
src/memory/: privacy.ts  session.ts  types.ts  vault.ts
src/server/: index.ts  proxy.ts  rate-limiter.ts  security.ts
src/shared/: config.ts  logger.ts  types.ts  utils.ts  validate.ts
(+42 files in other folders)
