[package]
name = "ultron-desktop"
version = "5.1.0"
description = "ULTRON Desktop — Neural Intelligence Platform"
authors = ["NRedondo26"]
edition = "2021"

[lib]
name = "ultron_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
